--- a/index.html
+++ b/index.html
@@ -230,6 +230,22 @@
                                     <li><a href="Under_Construction.html">HIGHLIGHTS & ACHIEVEMENTS</a></li>
                                 </ul>
                             </li>
+                            <!--li>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">MORE <b
+                                        class="caret"></b></a>
+                                <ul class="dropdown-menu multi-level">
+                                    <li><a href="announcements.html">Announcements</a></li>
+                                    <li><a href="view-events.html">News & Events</a></li>
+                                    <li><a href="Activities-in-Development-Stage.html">Activities-in-Development-Stage</a></li>
+                                    <li><a href="https://en.wikipedia.org/wiki/De_La_Salle_College,_Colombo">Wikipedia</a></li>
+                                    <li><a href="Under_Construction.html">Student's Corner</a></li>
+                                    <li><a href="Under_Construction.html" target="_blank">Coming soon</a></li>
+                                    <li><a href="Under_Construction.html">Coming soon</a></li>
+                                    <li><a href="Under_Construction.html">Coming soon</a></li>
+                                    <li><a href="Under_Construction.html">Coming soon</a></li>
+                                </ul>
+                            </li-->
+                            <li><a href="gallery.html">GALLERY</a></li>
                             <li>
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">MORE <b
                                         class="caret"></b></a>
@@ -245,7 +261,6 @@
                                     <li><a href="Under_Construction.html">Coming soon</a></li>
                                 </ul>
                             </li>
-                            <li><a href="gallery.html">GALLERY</a></li>
                             <li><a href="contact-us.html">CONTACT US</a></li>
                         </ul>
                     </div>
