--- a/blog1.html
+++ b/blog1.html
@@ -195,7 +195,49 @@
                 </a>
             </div>
             <style>
-                .pg-blog .ed-rese-grid-about{
+    .pg-blog{
+    /* width: 70%; */
+    margin: 0 auto;
+    margin-top: -60px;
+}
+.pg-blog ul li{
+    margin-bottom: 25px;
+    padding-bottom: 40px;	
+}
+.pg-blog h4{
+    margin-bottom: 30px;
+    margin-top: 30px;
+    text-align: center;
+    font-size: 36px;
+    color: #021f40 ;
+}
+.pg-blog img{
+    width: 100%;
+    margin-bottom: 0px;
+    box-shadow: 0px 0px 5px;
+}
+.pg-blog p{
+    text-align: justify;
+    font-family: Goudy Old Style;
+    font-size: 20px;
+}
+.pg-blog-reg{
+    float: left;
+    margin-left: 92px;
+}
+.pg-blog-reg a{}
+.pg-blog-desc{
+    margin-left: 100px;
+}
+.blog-share-btn{}
+.blog-share-btn ul li{
+    margin-bottom: 0px;
+    padding-bottom: 15px;
+    border-bottom: 0px;
+    padding-top: 0px;
+    line-height: 26px;	
+}
+.pg-blog .ed-rese-grid-about{
     padding: 25px;
     box-shadow: 0px 0px 10px;
     border: 1px solid #ececec;
@@ -207,6 +249,9 @@
     overflow: hidden;
     margin: 0px 8px;
 }
+.pg-blog .ed-rese-grid-about:hover{
+    box-shadow: 0px 0px 10px;
+}
             </style>
         <!-- Content wrapper -->
         <div class="contents-wrapper">
@@ -214,7 +259,7 @@
             <div class="content">
                 
                 <div class="pg-eve-desc pg-blog-desc ed-rese-grid-about">
-                    <h4>College Anthem</h4>
+                    <h4>About us</h4>
                     <p>The College Anthem entitled "White and Blue" was written by Rev. Fr. J. M. Lanigam, a great friend of Fr. Charles 
                     Collin, the first Rector. Music for the anthem was composed by Mr. Edgar Neydoff. Although the College Anthem was 
                     written during the last year (1916) of the Rectorship of Rev. Fr. Charles Collin O.M.I. the anthem was sung during the 2<sup>nd</sup> 
