--- a/blog2.html
+++ b/blog2.html
@@ -197,7 +197,8 @@
             <section>
                 <style>
                     .post-full{position:relative;z-index:50}.post-full-header{margin:0 auto;padding:0 3vw 3vw;max-width:1040px;text-align:center}@media(max-width:500px){.post-full-header{padding:14vw 3vw 10vw}.post-template .site-main{background:var(--white)!important}}.post-full-meta{background:var(--whitegrey);font-size:1.5rem;font-weight:600;color:var(--primary);padding:2rem;margin:-10rem -13rem 2rem;border-radius:2rem 2rem 0 0;border-top; }
-                </style>
+                    .post-full-title{color:#262626;text-align:center;margin:.5em 0}.date-divider{display:inline-block;margin:0 6px 1px}.post-full-image{margin:0 -5vw -120px;height:600px;background:var(--lightgrey) 50%;background-size:cover;border-radius:5px}@media(max-width:1170px){.post-full-image{margin:0 -4vw -100px;height:600px;border-radius:0}
+               </style>
                 <!-- Content wrapper -->
                 <div class="contents-wrapper">
                     <!-- Contents starts here -->
