--- a/blog2.html
+++ b/blog2.html
@@ -217,6 +217,10 @@
     background: var(--white);
     border-radius: 2rem;
 }
+@media (max-width: 1170px)
+.post-full-content {
+    padding: 5vw 9vw;
+}
 
                    </style>
                      <!-- Content wrapper -->
