--- a/blog2.html
+++ b/blog2.html
@@ -221,6 +221,11 @@
 .post-full-content {
     padding: 5vw 9vw;
 }
+@media (max-width: 1170px)
+.post-full-meta {
+    margin: -5vw -9vw 2vw;
+}
+
 
                    </style>
                      <!-- Content wrapper -->
