--- a/blog2.html
+++ b/blog2.html
@@ -217,6 +217,60 @@
     background: var(--white);
     border-radius: 2rem;
 }
+
+style attribute {
+    touch-action: pan-y;
+    -webkit-user-drag: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+body {
+    color: #262626;
+    font-family: Noto Sans Sinhala,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Open Sans,Helvetica Neue,sans-serif;
+    font-size: 1.5rem;
+    line-height: 1.6em;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: -.003em;
+    text-rendering: optimizeLegibility;
+    background: #fff;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -moz-font-feature-settings: "liga" on;
+}
+body {
+    line-height: 1;
+}
+:root {
+    --ghost-accent-color: #800926;
+}
+:root {
+    --primary: #ac193d;
+    --primaryDark: #800926;
+    --primaryLight: #fff5f5;
+    --secondary: #fcc;
+    --accent: #db3236;
+    --blue: #3eb0ef;
+    --green: #a4d037;
+    --purple: #ad26b4;
+    --yellow: #fecd35;
+    --red: #f05230;
+    --darkgrey: #333;
+    --midgrey: #666;
+    --midlightgrey: #ccc;
+    --lightgrey: #f1f1f1;
+    --whitegrey: #fafafa;
+    --white: #fff;
+    --pink: #fa3a57;
+    --brown: #a3821a;
+    --darkPrimary: #804553;
+    --darkLight: #ddd;
+    --darkFontColor: #aaa;
+    --darkBackgroundBright: #555;
+    --darkBackgroundLighter: #444;
+    --darkBackgroundLight: #333;
+    --darkBackground: #121212;
+    --darkBackgroundDark: #222;
+}
 @media (max-width: 1170px)
 .post-full-content {
     padding: 5vw 9vw;
