--- a/blog2.html
+++ b/blog2.html
@@ -244,7 +244,7 @@ body {
     --ghost-accent-color: #800926;
 }
 :root {
-    --primary: #ac193d;
+    --primary: #ff0000;
     --primaryDark: #800926;
     --primaryLight: #fff5f5;
     --secondary: #fcc;
