--- a/blog2.html
+++ b/blog2.html
@@ -209,7 +209,7 @@
 }
 .post-full-content {
     position: relative;
-    margin: 0 auto;
+    margin: -26px auto;
     padding: 4rem 4rem;
     min-height: 230px;
     font-size: 1.8rem;
