--- a/History-and-Location.html
+++ b/History-and-Location.html
@@ -172,6 +172,10 @@
             </nav>
         </header>
         <!-- /header -->
+        <div style="text-align: center;">
+            <a href="#" target="_blank"-->
+                <img class="responsive-img" src="img/gallery/14.JPG">
+            </a>
     </div>
         <section>
             <style>
