--- a/History-and-Location.html
+++ b/History-and-Location.html
@@ -174,7 +174,7 @@
         <!-- /header -->
         <div style="text-align: center;">
             <a href="#" target="_blank"-->
-                <img class="responsive-img" src="img/gallery/14.JPG">
+                <img class="responsive-img" src="img/gallery/13.png">
             </a>
     </div>
         <section>
