--- a/Old-Boys-Union.html
+++ b/Old-Boys-Union.html
@@ -174,7 +174,7 @@
         <!-- /header -->
         <div style="text-align: center;">
             <a href="#" target="_blank"-->
-                <img class="responsive-img" src="img/Obu/MAGAZINE.jpg">
+                <img class="responsive-img" src="img/Obu/DLS_OBU_ MAIN_HEAD.png">
             </a>
         </div>
         <section>
