--- a/gallery.html
+++ b/gallery.html
@@ -362,7 +362,8 @@ margin: -5vw -9vw 2vw;
                                             </div>
                                         </div>
             --> <img src="img/gallery/1.jpg" alt="">
-        </a></div>
+        </a>
+    </div>
   </div>
 </div>
      <!-- Footer -->
