--- a/gallery.html
+++ b/gallery.html
@@ -281,89 +281,185 @@ margin: -5vw -9vw 2vw;
   
   <div class="row">
     <div class="col-sm-6 col-md-4 mb-3">
-        <a class="element-item grid-item mix mockups" href="img/gallery/1.jpg">
-            <!--                            <div class="desc">
-                                            <div class="desc-title">
-                                                <span>Caption</span>
-                                            </div>
-                                        </div>
-            --> <img src="img/gallery/1.jpg" alt="">
-        </a></div>
+      <img src="https://images.unsplash.com/photo-1423589989400-cc0270157ed0?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=a95937ce1dc3243f52c30f86d948b771" alt="" class="fluid img-thumbnail">      
+    </div>
     <div class="col-sm-6 col-md-4 mb-3">
-        <a class="element-item grid-item mix mockups" href="img/gallery/1.jpg">
-            <!--                            <div class="desc">
-                                            <div class="desc-title">
-                                                <span>Caption</span>
-                                            </div>
-                                        </div>
-            --> <img src="img/gallery/1.jpg" alt="">
-        </a></div>
+      <img src="https://images.unsplash.com/photo-1423589989400-cc0270157ed0?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=a95937ce1dc3243f52c30f86d948b771" alt="" class="fluid img-thumbnail">      
+    </div>
     <div class="col-sm-6 col-md-4 mb-3">
-        <a class="element-item grid-item mix mockups" href="img/gallery/1.jpg">
-            <!--                            <div class="desc">
-                                            <div class="desc-title">
-                                                <span>Caption</span>
-                                            </div>
-                                        </div>
-            --> <img src="img/gallery/1.jpg" alt="">
-        </a></div>
+      <img src="https://images.unsplash.com/photo-1423589989400-cc0270157ed0?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=a95937ce1dc3243f52c30f86d948b771" alt="" class="fluid img-thumbnail">      
+    </div>
      <div class="col-sm-6 col-md-4 mb-3">
-        <a class="element-item grid-item mix mockups" href="img/gallery/1.jpg">
-            <!--                            <div class="desc">
-                                            <div class="desc-title">
-                                                <span>Caption</span>
-                                            </div>
-                                        </div>
-            --> <img src="img/gallery/1.jpg" alt="">
-        </a></div>
+      <img src="https://images.unsplash.com/photo-1423589989400-cc0270157ed0?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=a95937ce1dc3243f52c30f86d948b771" alt="" class="fluid img-thumbnail">      
+    </div>
     <div class="col-sm-6 col-md-4 mb-3">
-        <a class="element-item grid-item mix mockups" href="img/gallery/1.jpg">
-            <!--                            <div class="desc">
-                                            <div class="desc-title">
-                                                <span>Caption</span>
-                                            </div>
-                                        </div>
-            --> <img src="img/gallery/1.jpg" alt="">
-        </a></div>
+      <img src="https://images.unsplash.com/photo-1423589989400-cc0270157ed0?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=a95937ce1dc3243f52c30f86d948b771" alt="" class="fluid img-thumbnail">      
+    </div>
     <div class="col-sm-6 col-md-4 mb-3">
-        <a class="element-item grid-item mix mockups" href="img/gallery/1.jpg">
-            <!--                            <div class="desc">
-                                            <div class="desc-title">
-                                                <span>Caption</span>
-                                            </div>
-                                        </div>
-            --> <img src="img/gallery/1.jpg" alt="">
-        </a></div>
+      <img src="https://images.unsplash.com/photo-1423589989400-cc0270157ed0?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=a95937ce1dc3243f52c30f86d948b771" alt="" class="fluid img-thumbnail">      
+    </div>
      <div class="col-sm-6 col-md-4 mb-3">
-        <a class="element-item grid-item mix mockups" href="img/gallery/1.jpg">
-            <!--                            <div class="desc">
-                                            <div class="desc-title">
-                                                <span>Caption</span>
-                                            </div>
-                                        </div>
-            --> <img src="img/gallery/1.jpg" alt="">
-        </a></div>
+      <img src="https://images.unsplash.com/photo-1423589989400-cc0270157ed0?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=a95937ce1dc3243f52c30f86d948b771" alt="" class="fluid img-thumbnail">      
+    </div>
     <div class="col-sm-6 col-md-4 mb-3">
-        <a class="element-item grid-item mix mockups" href="img/gallery/1.jpg">
-            <!--                            <div class="desc">
-                                            <div class="desc-title">
-                                                <span>Caption</span>
-                                            </div>
-                                        </div>
-            --> <img src="img/gallery/1.jpg" alt="">
-        </a></div>
+      <img src="https://images.unsplash.com/photo-1423589989400-cc0270157ed0?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=a95937ce1dc3243f52c30f86d948b771" alt="" class="fluid img-thumbnail">      
+    </div>
     <div class="col-sm-6 col-md-4 mb-3">
-        <a class="element-item grid-item mix mockups" href="img/gallery/1.jpg">
-            <!--                            <div class="desc">
-                                            <div class="desc-title">
-                                                <span>Caption</span>
-                                            </div>
-                                        </div>
-            --> <img src="img/gallery/1.jpg" alt="">
-        </a>
+      <img src="https://images.unsplash.com/photo-1423589989400-cc0270157ed0?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=a95937ce1dc3243f52c30f86d948b771" alt="" class="fluid img-thumbnail">      
     </div>
   </div>
 </div>
+                    <h1>Gallery</h1>
+                </div>
+
+                <div class="grid">
+                    <div class="grid-sizer"></div>
+                    <!-- Remove appropriate comment and insert relevant caption if needed. -->
+
+                    <!--Image 1-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/1.jpg">
+                        <!--                            <div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>Caption</span>
+                                                        </div>
+                                                    </div>
+                        --> <img src="img/gallery/1.jpg" alt="">
+                    </a>
+
+                    <!--Image 2-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/2.jpg">
+                        <!--                            <div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>Caption</span>
+                                                        </div>
+                                                    </div>
+                        --> <img src="img/gallery/2.jpg" alt="">
+                    </a>
+
+                    <!--Image 3-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/3.jpg">
+                        <!--                            <div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>Caption</span>
+                                                        </div>
+                                                    </div>
+                        --> <img src="img/gallery/3.jpg" alt="">
+                    </a>
+
+                    <!--Image 4-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/4.jpg">
+                        <!--                            <div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>Caption</span>
+                                                        </div>
+                                                    </div>
+                        --> <img src="img/gallery/4.jpg" alt="">
+                    </a>
+
+                    <!--Image 5-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/5.jpg">
+                        <!--                            <div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>Caption</span>
+                                                        </div>
+                                                    </div>
+                        --> <img src="img/gallery/5.jpg" alt="">
+                    </a>
+
+                    <!--Image 6-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/6.jpg">
+                        <!--                            <div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>Caption</span>
+                                                        </div>
+                                                    </div>
+                        --> <img src="img/gallery/6.jpg" alt="">
+                    </a>
+
+                    <!--Image 7-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/7.jpg">
+                        <!--                            <div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>Caption</span>
+                                                        </div>
+                                                    </div>
+                        --> <img src="img/gallery/7.jpg" alt="">
+                    </a>
+
+                    <!--Image 8-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/8.jpg">
+                        <!--                            <div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>Caption</span>
+                                                        </div>
+                                                    </div>
+                        --> <img src="img/gallery/8.jpg" alt="">
+                    </a>
+
+                    <!--Image 9-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/9.jpg">
+                        <!--                            <div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>Caption</span>
+                                                        </div>
+                                                    </div>
+                        --> <img src="img/gallery/9.jpg" alt="">
+                    </a>
+
+                    <!--Image 10-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/10.jpg">
+                        <!--                            <div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>Caption</span>
+                                                        </div>
+                                                    </div>
+                        --> <img src="img/gallery/10.jpg" alt="">
+                    </a>
+
+                    <!--Image 11-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/11.jpg">
+                        <!--                            <div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>Caption</span>
+                                                        </div>
+                                                    </div>
+                        --> <img src="img/gallery/11.jpg" alt="">
+                    </a>
+
+                    <!--Image 12-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/12.jpg">
+                        <!--                            <div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>Caption</span>
+                                                        </div>
+                                                    </div>
+                        --> <img src="img/gallery/12.jpg" alt="">
+                    </a>
+
+                    <!--Image 13-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/13.png">
+                        <!--                            <div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>Caption</span>
+                                                        </div>
+                                                    </div>
+                        --> <img src="img/gallery/13.png" alt="">
+                    </a>
+
+                        <!--Image 14-->
+                    <a class="element-item grid-item mix mockups" href="img/gallery/14.JPG">
+                        <!--                            <div class="desc">
+                                                        <div class="desc-title">
+                                                            <span>Caption</span>
+                                                        </div>
+                                                    </div>
+                        --> <img src="img/gallery/14.JPG" alt="">
+                    </a>
+
+                </div>
+            </div>
+        </div>
+    </div>
      <!-- Footer -->
      <footer>
         <div class="footer-wrapper">
