--- a/gallery.html
+++ b/gallery.html
@@ -278,6 +278,10 @@ margin: -5vw -9vw 2vw;
             <div class="gallery gallery-design">
                 <div class="title">
 
+                    <div class="grid">
+                        <div class="grid-sizer"></div>
+                        <!-- Remove appropriate comment and insert relevant caption if needed. -->
+    
                     <h1>Gallery</h1>
                 </div>
 
