--- a/gallery.html
+++ b/gallery.html
@@ -278,7 +278,7 @@ margin: -5vw -9vw 2vw;
             <div class="gallery gallery-design">
                 <div class="title">
 
-                        <div class="grid-sizer"></div>
+                        <div class="grid-sizer"class="grid"></div>
                         <!-- Remove appropriate comment and insert relevant caption if needed. -->
     
                     <!--Image 1-->
