--- a/gallery.html
+++ b/gallery.html
@@ -281,7 +281,7 @@ body {
                     <!-- Remove appropriate comment and insert relevant caption if needed. -->
 
                     <!--Image 1-->
-                    <a class="element-item grid-item mix mockups" href="img/gallery/1.jpg">
+                    <a class="element-item grid-item mix mockups" data-toggle="lightbox" data-gallery="gallery" class="col-md-4" href="img/gallery/1.jpg">
                         <!--                            <div class="desc">
                                                         <div class="desc-title">
                                                             <span>Caption</span>
