--- a/gallery.html
+++ b/gallery.html
@@ -277,7 +277,7 @@ body {
     }
     .img-box img {
         max-width: 100%;
-        border: 3px solid #FFC107;
+        border: 3px solid #0d0669;
         position: relative;
         width: 100%;
     }
