--- a/gallery.html
+++ b/gallery.html
@@ -366,6 +366,46 @@ body {
                                 <img src="img/gallery/11.jpg" alt="">
                             </div>
                         </div>
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="img-box">
+                                <img src="img/gallery/3.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="img-box">
+                                <img src="img/gallery/5.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="img-box">
+                                <img src="img/gallery/6.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="img-box">
+                                <img src="img/gallery/8.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="img-box">
+                                <img src="img/gallery/9.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="img-box">
+                                <img src="img/gallery/10.jpg" alt="">
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="img-box">
+                                <img src="img/gallery/13.png" alt="">
+                            </div>
+                        </div>
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="img-box">
+                                <img src="img/gallery/14.JPG" alt="">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
