--- a/gallery.html
+++ b/gallery.html
@@ -348,6 +348,11 @@ body {
                                 <img src="img/gallery/4.jpg" alt="">
                             </div>
                         </div>
+                        <div class="col-sm-6 col-lg-4">
+                            <div class="img-box">
+                                <img src="img/gallery/15.png" alt="">
+                            </div>
+                        </div>
             
                         <div class="col-sm-6 col-lg-4">
                             <div class="img-box">
