--- a/Identity/college-motto-and-flag_colours.html
+++ b/Identity/college-motto-and-flag_colours.html
@@ -145,7 +145,7 @@
         <!-- /header -->
         <div style="text-align: center;">
             <a href="#" target="_blank"-->
-                <img class="responsive-img" src="img/gallery/13.png">
+                <img class="responsive-img" src="../vid/wave flag animation1_1.mp4">
             </a>
     </div>
         <section>
