--- a/Identity/college-motto-and-flag_colours.html
+++ b/Identity/college-motto-and-flag_colours.html
@@ -254,7 +254,7 @@ body {
                 
                 <p><b id="docs-internal-guid-0870b9ca-7fff-8ea7-0101-71917fa4a704" style="font-weight: normal;"><br /></b></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: center;"><span style="background-color: transparent; color: black; font-family: Balthazar,serif; font-size: 20pt; font-style: normal; font-variant: normal; font-weight: 700; text-decoration: none; vertical-align: baseline; white-space: pre;">College &nbsp; Motto, Flag&nbsp; &amp;&nbsp; Colours</span></p><div class="separator" style="clear: both; text-align: center;"><span style="border: none; display: inline-block; height: 284px; margin-left: 1em; margin-right: 1em; overflow: hidden; width: 480px;"> 
                 </br>
-                    <video height="284" src="../vid/wave flag animation1_1.mp4" style="margin-left: 0px; margin-top: 0px;" width="480"></video</span></div>
+                    <video height="284" src="../vid/wave flag animation1_1.mp4" style="margin-left: 0px; margin-top: 0px;" width="480"></video></span></div>
                 <!--div style="text-align: center;">
                     <a href="#" target="_blank">
                         <img class="responsive-img" src="../gif/wave-flag animation1.gif" style="width: 480px; height: 480px;;">
