--- a/Identity/college-motto-and-flag_colours.html
+++ b/Identity/college-motto-and-flag_colours.html
@@ -144,9 +144,9 @@
         </header>
         <!-- /header -->
         <div style="text-align: center;">
-            <a href="#" target="_blank"-->
-                <img class="responsive-img" src="../vid/wave flag animation1_1.mp4">
-            </a>
+            <video autoplay="autoplay" loop="loop" autobuffer="autobuffer" muted="muted" width="100%" height="auto">
+                <source src="vid/wave flag animation1_1.mp4" type="video/mp4">
+            </video>
     </div>
         <section>
             <style>
