--- a/Identity/college-motto-and-flag_colours.html
+++ b/Identity/college-motto-and-flag_colours.html
@@ -145,7 +145,7 @@
         <!-- /header -->
         <div style="text-align: center;">
             <video autoplay="autoplay" loop="loop" autobuffer="autobuffer" muted="muted" width="100%" height="auto">
-                <source src="vid/wave flag animation1_1.mp4" type="video/mp4">
+                <source src="../vid/wave flag animation1_1.mp4" type="video/mp4">
             </video>
     </div>
         <section>
@@ -255,7 +255,7 @@ body {
                 <p><b id="docs-internal-guid-0870b9ca-7fff-8ea7-0101-71917fa4a704" style="font-weight: normal;"><br /></b></p><p dir="ltr" style="line-height: 1.2; margin-bottom: 0pt; margin-top: 0pt; text-align: center;"><span style="background-color: transparent; color: black; font-family: Balthazar,serif; font-size: 20pt; font-style: normal; font-variant: normal; font-weight: 700; text-decoration: none; vertical-align: baseline; white-space: pre;">College &nbsp; Motto, Flag&nbsp; &amp;&nbsp; Colours</span></p><div class="separator" style="clear: both; text-align: center;"><span style="border: none; display: inline-block; height: 284px; margin-left: 1em; margin-right: 1em; overflow: hidden; width: 480px;"> 
                 </br>
                     <video height="284" style="margin-left: 0px; margin-top: 0px;" width="480">
-                        <source src="vid/wave flag animation1_1.mp4" type="video/mp4">
+                        <source src="../vid/wave flag animation1_1.mp4" type="video/mp4">
                 </video>
                 <!--div style="text-align: center;">
                     <a href="#" target="_blank">
