--- a/Identity/college-motto-and-flag_colours.html
+++ b/Identity/college-motto-and-flag_colours.html
@@ -257,6 +257,7 @@ body {
                     <video height="284" style="margin-left: 0px; margin-top: 0px;" width="480">
                         <source src="../vid/wave flag animation1_1.mp4" type="video/mp4">
                 </video>
+            </div>
                 <!--div style="text-align: center;">
                     <a href="#" target="_blank">
                         <img class="responsive-img" src="../gif/wave-flag animation1.gif" style="width: 480px; height: 480px;;">
