--- a/Identity/mission-vision.html
+++ b/Identity/mission-vision.html
@@ -254,7 +254,7 @@ body {
                 </div>
                 <div style="text-align: center;">
                     <a href="#" target="_blank">
-                        <img class="responsive-img" src="../img/our vision.jpg" ; src="../img/dlsobucrest.jpg" style="width: 250px; height:250px;">
+                        <img class="responsive-img" src="../img/our vision.jpg" ; src="../img/dlsobucrest.jpg" style="width: auto; height:auto;">
                     </a>
                 </div>
                 <br/>
