--- a/Identity/mission-vision.html
+++ b/Identity/mission-vision.html
@@ -144,7 +144,7 @@
         <!-- /header -->
         <div style="text-align: center;">
             <video autoplay="autoplay" loop="loop" autobuffer="autobuffer" muted="muted" width="100%" height="auto">
-                <source src="../vid/wave flag animation1_1.mp4" type="video/mp4">
+                <source src="../img/our vision.jpg" type="video/mp4">
             </video>
     </div>
         <section>
@@ -254,7 +254,7 @@ body {
                 </div>
                 <div style="text-align: center;">
                     <a href="#" target="_blank">
-                        <img class="responsive-img" src="../img/our vision.jpg" ; src="../img/dlsobucrest.jpg" style="width: auto; height:auto;">
+                        <img class="responsive-img" src="../img/dlsobucrest.jpg" style="width: auto; height:auto;">
                     </a>
                 </div>
                 <br/>
