--- a/Identity/mission-vision.html
+++ b/Identity/mission-vision.html
@@ -144,9 +144,7 @@
         </header>
         <!-- /header -->
         <div style="text-align: center;">
-            <video autoplay="autoplay" loop="loop" autobuffer="autobuffer" muted="muted" width="100%" height="auto">
-                <source src="../img/our vision.jpg" type="video/mp4">
-            </video>
+                <img class="responsive-img" src="../img/our vision.jpg">
     </div>
         <section>
             <style>
@@ -255,7 +253,7 @@ body {
                 </div>
                 <div style="text-align: center;">
                     <a href="#" target="_blank">
-                        <img class="responsive-img" src="../img/dlsobucrest.jpg" style="width: auto; height:auto;">
+                        <img class="responsive-img" src="../img/dlsobucrest.jpg" style="width: 250px; height:250px;">
                     </a>
                 </div>
                 <br/>
