--- a/Identity/mission-vision.html
+++ b/Identity/mission-vision.html
@@ -257,7 +257,8 @@ body {
                     </a>
                 </div>
                 <br/>
-                <p> Having placed in a multi-racial, multi-religious and multi-lingual society with
+                <p> 
+                Having placed in a multi-racial, multi-religious and multi-lingual society with
                 different cultures, traditions and customs in the Colombo North area and having
                 imbibed with the Lasallian Charism, we strive to base our educational efforts and
                 vision on the Lasallian Education Model which develops the potential of a student’s
