--- a/Identity/mission-vision.html
+++ b/Identity/mission-vision.html
@@ -252,7 +252,7 @@ body {
                     <h3>Our Vision</h3>
                 </div>
                 <div style="text-align: center;">
-                    <a href="#" target="_blank">
+                    <!--a href="#" target="_blank"-->
                         <img class="responsive-img" src="../img/dlsobucrest.jpg" style="width: 250px; height:250px;">
                     </a>
                 </div>
@@ -280,10 +280,9 @@ body {
                     <div class="separator"><div class="separator" style="clear: both; text-align: center;"><u style="margin-left: 1em; margin-right: 1em;"><img height="320" src="https://lh5.googleusercontent.com/mQxOC_F7-Dgok3aE_Ionx_ruXRjP1g_gd6rIrXWscOQ3v9Gvc-SeJjheHzkfehqoSoX-RNuWtxtZNokQnjqcoUlTqfY5l1T24iRj22oc3kvheRy0gNQtIdH6NxxnqcMB1myMvhqI=w184-h320" style="font-size: 10pt; margin-left: 0px; margin-top: 0px; white-space: pre-wrap;" width="184" /></u></div><p style="margin-left: 1em; margin-right: 1em;">&nbsp;</p></div>
                 </div>
                 <br/>
-                <p> De La Salle College, Colombo aspires to provide an environment which
+            <p> De La Salle College, Colombo aspires to provide an environment which
                 actively encourages all members to strive to achieve personal excellence through a
-                challenging, comprehensive curriculum and a variety of teaching styles.
-                </p>>
+                challenging, comprehensive curriculum and a variety of teaching styles.</p> <br>
                 <p>
                 The curriculum aims to address student’s need for personal growth, to arrive at an
                 appreciation of their culture, to address the expectations of the world of work and
