--- a/Identity/mission-vision.html
+++ b/Identity/mission-vision.html
@@ -268,7 +268,8 @@ body {
                 </p>
             </div>
         </div>
-
+        </div>
+    </section>
         <div style="text-align: center;">
             <h3>Our Vision</h3>
         </div>
