--- a/Identity/mission-vision.html
+++ b/Identity/mission-vision.html
@@ -268,22 +268,29 @@ body {
                 </p>
             </div>
         </div>
+
+        <div class="contents-wrapper">
+            <!-- Contents starts here -->
+            <div class="contents">
+                <div style="text-align: center;">
+                    <h3>Our Mission</h3>
+                </div>
+            </br>
+        </br>
+                    <div class="separator"><div class="separator" style="clear: both; text-align: center;"><u style="margin-left: 1em; margin-right: 1em;"><img height="320" src="https://lh5.googleusercontent.com/mQxOC_F7-Dgok3aE_Ionx_ruXRjP1g_gd6rIrXWscOQ3v9Gvc-SeJjheHzkfehqoSoX-RNuWtxtZNokQnjqcoUlTqfY5l1T24iRj22oc3kvheRy0gNQtIdH6NxxnqcMB1myMvhqI=w184-h320" style="font-size: 10pt; margin-left: 0px; margin-top: 0px; white-space: pre-wrap;" width="184" /></u></div><p style="margin-left: 1em; margin-right: 1em;">&nbsp;</p></div>
+                </div>
+            <p> De La Salle College, Colombo aspires to provide an environment which
+                actively encourages all members to strive to achieve personal excellence through a
+                challenging, comprehensive curriculum and a variety of teaching styles.
+                The curriculum aims to address student’s need for personal growth, to arrive at an
+                appreciation of their culture, to address the expectations of the world of work and
+                the challenges of a rapidly changing society which establishes a climate in which
+                students are encouraged to strive for increasing levels of self - discipline and
+                responsibility and where students, staff and parents experience co-operation and
+                mutual support
+                </p>
+            </div>
         </div>
-    </section>
-        <div style="text-align: center;">
-            <h3>Our Vision</h3>
-        </div>
-        <div style="text-align: center;">
-            <!--a href="#" target="_blank"-->
-                <img class="responsive-img" src="https://lh5.googleusercontent.com/mQxOC_F7-Dgok3aE_Ionx_ruXRjP1g_gd6rIrXWscOQ3v9Gvc-SeJjheHzkfehqoSoX-RNuWtxtZNokQnjqcoUlTqfY5l1T24iRj22oc3kvheRy0gNQtIdH6NxxnqcMB1myMvhqI=w184-h320" style="width: 250px; height:250px;">
-            </a>
-        </div>
-    </br>
-        <p>De La Salle College, Colombo aspires to provide an environment which actively encourages all members to strive to achieve personal excellence through a challenging, comprehensive curriculum and a variety of teaching styles. The curriculum aims to address student’s need for personal growth, to arrive at an appreciation of their culture, to address the expectations of the world of work and the challenges of a rapidly changing society which establishes a climate in which students are encouraged to strive for increasing levels of self - discipline and responsibility and where students, staff and parents experience co-operation and mutual support</p>
-    </div>
-</div>
-        </div>
-    </section>
         <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
