--- a/index.html
+++ b/index.html
@@ -14,6 +14,26 @@
     <link href="css/snowflakes.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
+    <!--Site Meta-->
+    <!-- Primary Meta Tags -->
+<title>De La Salle College, Colombo - Indivisa Manent</title>
+<meta name="title" content="De La Salle College, Colombo - Indivisa Manent">
+<meta name="description" content="De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://delasalle.lk">
+<meta property="og:title" content="De La Salle College, Colombo - Indivisa Manent">
+<meta property="og:description" content="De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".">
+<meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://delasalle.lk">
+<meta property="twitter:title" content="De La Salle College, Colombo - Indivisa Manent">
+<meta property="twitter:description" content="De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".">
+<meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--Snow Flakes-->
 <!--div class="snowflakes" aria-hidden="true">
