--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 <meta property="og:url" content="https://delasalle.lk">
 <meta property="og:title" content="De La Salle College, Colombo - Indivisa Manent">
 <meta property="og:description" content="De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".">
-<meta property="og:image" content="https://github.com/kasuncfdo/dls/blob/main/img/Meta/dlsogimg1ps.jpg">
+<meta property="og:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://delasalle.lk">
 <meta property="twitter:title" content="De La Salle College, Colombo - Indivisa Manent">
 <meta property="twitter:description" content="De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".">
-<meta property="twitter:image" content="https://github.com/kasuncfdo/dls/blob/main/img/Meta/dlsogimg1ps.jpg">
+<meta property="twitter:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!--Snow Flakes-->
