--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <!--Site Meta-->
+
+    <meta property="og:locale" content="en_GB" />
+    <meta property="og:site_name" content="De La Salle College,Colombo - Indivisa Manent" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="De La Salle College,Colombo - Indivisa Manent" />
+    <meta property="og:url" content="https://www.delasalle.lk/" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg" />
+    <meta property="og:image:secure_url" content="hhttps://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg" />
+    <meta property="og:image:width" content="1024" />
+    <meta property="og:image:height" content="567" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="" />
+    <meta name="twitter:domain" content="www.delasalle.lk" />
+    <meta name="twitter:title" content="De La Salle College,Colombo - Indivisa Manent" />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsogimg1ps.jpg" />
+
     <!-- Primary Meta Tags -->
 <title>De La Salle College, Colombo - Indivisa Manent</title>
 <meta name="title" content="De La Salle College, Colombo - Indivisa Manent">
