--- a/Old-Boys-Union.html
+++ b/Old-Boys-Union.html
@@ -30,7 +30,7 @@
     <meta name="twitter:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsobuogimg2.png"/>
 
     <!-- Primary Meta Tags -->
-<title>De La Salle College, Colombo - Indivisa Manent</title>
+<title>Old Boys Union | De La Salle College, Colombo - Indivisa Manent</title>
 <meta name="title" content="De La Salle College, Colombo - Indivisa Manent">
 <meta name="description" content="De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".">
 
