--- a/Old-Boys-Union.html
+++ b/Old-Boys-Union.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>De La Salle College Colombo 15 | Old Boys Union </title>
+    <title>Old Boys Union | De La Salle College Colombo 15</title>
     <!--Style Starts-->
     <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
@@ -26,25 +26,25 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="" />
     <meta name="twitter:domain" content="www.delasalle.lk" />
-    <meta name="twitter:title" content="De La Salle College,Colombo - Indivisa Manent" />
+    <meta name="twitter:title" content="Old Boys Union | De La Salle College,Colombo - Indivisa Manent" />
     <meta name="twitter:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsobuogimg2.png"/>
 
     <!-- Primary Meta Tags -->
 <title>Old Boys Union | De La Salle College, Colombo - Indivisa Manent</title>
-<meta name="title" content="De La Salle College, Colombo - Indivisa Manent">
+<meta name="title" content="Old Boys Union | De La Salle College, Colombo - Indivisa Manent">
 <meta name="description" content="De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://delasalle.lk">
-<meta property="og:title" content="De La Salle College, Colombo - Indivisa Manent">
+<meta property="og:title" content="Old Boys Union | De La Salle College, Colombo - Indivisa Manent">
 <meta property="og:description" content="De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".">
 <meta property="og:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsobuogimg2.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://delasalle.lk">
-<meta property="twitter:title" content="De La Salle College, Colombo - Indivisa Manent">
+<meta property="twitter:title" content="Old Boys Union | De La Salle College, Colombo - Indivisa Manent">
 <meta property="twitter:description" content="De La Salle College, Colombo is the only school in Sri Lanka dedicated to the Patron Saint of Christian Teachers St. John Baptist de la Salle, founder of the congregation of De La Salle Brothers of the Christian Schools in Latin: "Fratres Scholarum Christianarum".">
 <meta property="twitter:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsobuogimg2.png">
 
