--- a/Old-Boys-Union.html
+++ b/Old-Boys-Union.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="Old Boys Union | De La Salle College,Colombo - Indivisa Manent" />
     <meta property="og:url" content="https://www.delasalle.lk/" />
     <meta property="og:image" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsobuogimg2.png" />
-    <meta property="og:image:secure_url" content="hhttps://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsobuogimg2.png"/>
+    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/kasuncfdo/dls/main/img/Meta/dlsobuogimg2.png"/>
     <meta property="og:image:width" content="1024" />
     <meta property="og:image:height" content="567" />
     <meta name="twitter:card" content="summary_large_image" />
