--- a/directors_message.html
+++ b/directors_message.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>De La Salle College Colombo 15 | Director's Message</title>
+    <title>Principal's Message | De La Salle College, Colombo - “Indivisa Manent”</title>
     <!--Style Starts-->
     <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
