--- a/History-and-Location.html
+++ b/History-and-Location.html
@@ -171,7 +171,7 @@
         <!-- /header -->
         <div style="text-align: center;">
             <a href="#" target="_blank"-->
-                <img class="responsive-img" src="img/Meta/thumbnailhead.jpg">
+                <img class="responsive-img" src="img/delasalle-flag.jpg">
             </a>
     </div>
         <section>
