--- a/Bridge-between-the-College-and-the-Old-Boys.html
+++ b/Bridge-between-the-College-and-the-Old-Boys.html
@@ -162,7 +162,7 @@
         <!-- /header -->
         <div style="text-align: center;">
             <a href="#" target="_blank"-->
-                <img class="responsive-img" src="img/Meta/thumbnailhead.jpg">
+                <img class="responsive-img" src="img/Meta/dlsobuogimg2.jpg">
             </a>
     </div>
         <section>
