--- a/contact-us.html
+++ b/contact-us.html
@@ -247,6 +247,22 @@ body {
   --darkBackgroundDark: #222;
 }
 
+@media (min-width: 992px)
+.container {
+    /* width: 970px; */
+}
+
+@media (min-width: 768px)
+.container {
+    width: 750px;
+}
+.container {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 </style>
           </section>
                    <!-- Content wrapper -->
