--- a/contact-us.html
+++ b/contact-us.html
@@ -454,6 +454,7 @@ body{margin-top:20px;}
     <br>
     <br>
         </section>
+    </div>
         <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
