--- a/contact-us.html
+++ b/contact-us.html
@@ -247,22 +247,6 @@ body {
   --darkBackgroundDark: #222;
 }
 
-@media (min-width: 992px)
-.container {
-    width: 970px;
-}
-
-@media (min-width: 768px)
-.container {
-    width: 750px;
-}
-.container {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-}
-
 </style>
           </section>
                    <!-- Content wrapper -->
@@ -359,6 +343,52 @@ body{margin-top:20px;}
   box-shadow: 1px 5px 9px rgba(241, 96, 1, 0.32);
 }
 
+
+
+/*======= Responsive ======*/
+  .contact-page .col-sm-6 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+}
+
+  .screen-space {
+    margin: 0px auto 50px auto;
+  }
+  .feature-detail {
+    padding: 0px 0px 50px 30px !important;
+  }
+  .footer h5 {
+    margin-top: 30px;
+  }
+}
+
+
+@media only screen and (min-width: 768px) and (max-width: 991px){
+  .blog-wrapper .blog-item {
+    width: 50%;
+  }
+  .navbar-custom .navbar-nav li a {
+    font-size: 12px;
+  }
+  .blog-detail-box {
+  padding-right: 0px;
+}
+}
+@media only screen and (min-width: 767px) and (max-width: 991px){
+  
+}
+@media (max-width: 767px) {
+  .blog-wrapper .blog-item {
+    width: 100%;
+  }
+  .logo {
+    margin-top: 7px;
+  }
+  .blog-detail-box {
+  padding-right: 0px;
+}
+}
             
         </style>
         <br>
@@ -454,7 +484,6 @@ body{margin-top:20px;}
     <br>
     <br>
         </section>
-    </div>
         <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
