--- a/contact-us.html
+++ b/contact-us.html
@@ -254,6 +254,8 @@ body {
                   <!-- Contents starts here -->
                   <section class="post-full-content">
                       <div class="post-full-meta noprint">
+                      <div class="pull-right">
+                      </div>
                       </div>
                       <h1 class="post-full-title" style="text-align: center;">CONTACT US</h1>
                       </div>
