--- a/contact-us.html
+++ b/contact-us.html
@@ -247,6 +247,10 @@ body {
   --darkBackgroundDark: #222;
 }
 
+.pull-right {
+  left: auto;
+}
+
 </style>
           </section>
                    <!-- Content wrapper -->
