--- a/Organizational-Structure.html
+++ b/Organizational-Structure.html
@@ -2024,12 +2024,14 @@
                 136 0 74 -3 93 -16 98 -21 8 -49 8 -57 -1z"/>
                 </g>
                 </svg>
-                
-                .svg-container {
+                <style>
+ .svg-container {
                   width: 10em;
                   width:  auto;
                   height: auto;
                 }
+                </style>
+               
             </div>
         </div>
     </div>
