--- a/Organizational-Structure.html
+++ b/Organizational-Structure.html
@@ -170,7 +170,7 @@
           <center>  <h1><strong>Organizational Structure</strong></h1> </center>
             <br/><br/>
                 <svg version="1.0" xmlns="http://www.w3.org/2000/svg"
-                 width="855px" height="auto" viewBox="0 0 2482.000000 3508.000000"
+                 width="855px" height="responsive" viewBox="0 0 2482.000000 3508.000000"
                  preserveAspectRatio="xMidYMid meet">
                 
                 <g transform="translate(0.000000,3508.000000) scale(0.100000,-0.100000)"
