--- a/Organizational-Structure.html
+++ b/Organizational-Structure.html
@@ -170,7 +170,7 @@
         <div class="content">
           <center>  <h1><strong>Organizational Structure</strong></h1> </center>
             <br/><br/>
-            <img class="responsive-img" src="img/Organizational-Structure.jpg">
+            <img class="responsive-img" height="auto" width="auto" src="img/Organizational-Structure.jpg">
         </div>
     </div>
     <!-- Footer -->
