--- a/blog1.html
+++ b/blog1.html
@@ -229,7 +229,7 @@
               box-shadow: 0 7px 30px -10px rgba(150,170,180,0.5);
             }
                 </style>
-                <section style="background-image: url(/img/wine-atlantic-ocean.png);background-attachment: fixed;background-repeat: no-repeat;background-size: cover;"></section>
+                <section style="background-image: url(/img/gallery/13.png);background-attachment: fixed;background-repeat: no-repeat;background-size: cover;">
                 <!-- Content wrapper -->
                 <div class="contents-wrapper">
                     <!-- Contents starts here -->
