--- a/blog1.html
+++ b/blog1.html
@@ -211,7 +211,9 @@
               max-width: 1288px;
               border-radius: 20px;
               margin: 60px auto;
-              color: #fff;
+              /*color: #fff;*/
+  backdrop-filter: blur(10px);
+}
             }
             
             .highlight {
