--- a/blog1.html
+++ b/blog1.html
@@ -211,8 +211,8 @@
               max-width: 1288px;
               border-radius: 20px;
               margin: 60px auto;
-              /*color: #fff;*/
-  backdrop-filter: blur(10px);
+              /*color: #fff;
+  backdrop-filter: blur(10px);***/
 }
             }
             
