--- a/blog1.html
+++ b/blog1.html
@@ -404,7 +404,7 @@
                 }
                 
                 .tomb_back {
-                  background: url("https://fsmedia.imgix.net/cd/c9/5e/ba/4817/4d9a/93f0/c776ec32ecbc/lara-crofts-neck-looks-unnatural-in-the-new-poster-for-tomb-raider.png");
+                  background: url("/img/Bro.\ R.\ Joseph\ Jeyakanthan.jpg");
                 }
                 
                 #ave {
