--- a/blog1.html
+++ b/blog1.html
@@ -393,7 +393,7 @@
                 }
                 
                 .bright_back {
-                  background: url("https://occ-0-2433-448.1.nflxso.net/art/cd5c9/3e192edf2027c536e25bb5d3b6ac93ced77cd5c9.jpg");
+                  background: url("img/Bro.\ R.\ Joseph\ Jeyakanthan.jpg");
                 }
                 
                 #tomb {
