--- a/blog1.html
+++ b/blog1.html
@@ -394,7 +394,7 @@
                 
                 .bright_back {
                   weight:auto;
-                  height: 100px;
+                  height:auto;
                   background: url("img/Bro.\ R.\ Joseph\ Jeyakanthan.jpg");
                 }
                 
