--- a/blog1.html
+++ b/blog1.html
@@ -544,6 +544,186 @@
             </div>
         </div>
         <section>
+            <style>
+                /*-------------------------------------------------*/
+/* =  RESARCH PAGE CSS Styles
+/*-------------------------------------------------*/
+.ed-res-bg{
+	background: rgb(10, 11, 59) repeat center center;
+}
+.ed-rese-grid{
+    box-sizing: border-box;
+    background: #fff;
+    border: 1px solid #ececec;
+    position: relative;
+    /* display: inline-block; */
+    overflow: hidden;
+    margin: 0px 8px;
+    box-shadow: 0px 7px 12px -9px rgba(14, 14, 14, 0.8);
+}
+.ed-rsear{}
+.ed-rese-grid{
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;	
+}
+.ed-rese-grid:hover{
+    -webkit-transform: scale(1.02);
+    transform: scale(1.02);	
+}
+.ed-rsear-in{
+    margin: 0 auto;
+    display: table;
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+}
+.ed-rsear-in ul{}
+.ed-rsear-in ul li{
+    float: left;
+    width: 33%;
+    box-sizing: border-box;
+    padding: 10px;
+}
+.ed-rsear-img{
+    float: left;
+}
+.ed-rsear-img img{
+    width: 120px;
+}
+.ed-rsear-dec{
+    float: left;
+    padding: 20px;
+}
+.ed-rsear-dec h4{
+}
+.ed-rsear-dec h4 a{
+    text-transform: capitalize;
+    font-size: 20px;
+    color: #000;
+    font-weight: 600;
+}
+.ed-rsear-dec a{
+    font-size: 16px;
+    font-weight: 600;
+    color: #8f98a9;
+}
+.ed-rsear-dec a span{
+    font-size: 16px;
+    color: #0A0B3B;
+    font-weight: 600;
+}
+.ed-flag{
+    position: absolute;
+    right: 20px;
+    top: 20px;
+}
+.ed-flag img{
+    border-radius: 10px;	
+}
+.ed-flag a{}
+.ed-faci-full-top{}
+.ed-faci-full-top img{
+	width:100%;
+}
+.ed-faci-full-bot{}
+.ed-faci-full-bot h4{
+	margin-bottom:15px;
+}
+.ed-faci-full-bot h4 a{}
+.ed-faci-full-bot p{
+	font-size:15px;
+}
+.read-line-btn{
+padding: 6px 0px;
+    border-radius: 3px;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 14px;
+    height: 35px;
+    text-align: center;
+    /* margin: 0px 10px; */
+    /* background: linear-gradient(to top, #ef612f, #0A0B3B); */
+    color: #0A0B3B !important;
+    margin-top: 10px;
+    display: inline-block;
+}
+.read-line-btn:hover{
+    color: #fff;
+    text-decoration: underline;
+
+}
+.ed-rese-grid-mar-bot-30{
+	margin-bottom:30px;
+}
+.s17-eve-time {
+    width: 100%;
+    border-bottom: 1px solid #ececec;
+    padding: 10px 10px 25px 10px;
+    margin-bottom: 25px;
+    box-sizing: border-box;
+    position: relative;
+    overflow: hidden;
+}
+.s17-eve-time-tim {
+    float: left;
+    width: 25%;
+    box-sizing: border-box;
+}
+.s17-eve-time-msg {
+    float: left;
+    width: 75%;
+    padding-right: 80px;
+    box-sizing: border-box;
+}
+.ed-pho-gal{}
+.ed-pho-gal ul{}
+.ed-pho-gal ul li{
+	float:left;
+	width:20%;
+}
+.ad-log-main{
+    position: fixed;
+    overflow: hidden;
+	background: #005C97;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #363795, #005C97);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #363795, #005C97); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    width: 100%;
+    height: 100%;
+}
+.ad-log-in{
+    position: relative;
+    overflow: hidden;
+    width: 40%;
+    margin: 25px;
+    margin: 0 auto;
+    text-align: center;
+    background: #fff;	
+    padding: 50px;
+    margin-top: 50px;
+    border-radius: 4px;
+}
+.ad-log-in-logo{}
+.ad-log-in-logo a{}
+.ad-log-in-logo a img{}
+.ad-log-in-con{
+    position: relative;
+    overflow: hidden;
+}
+.log-in-pop-right{
+}
+.ad-log-in-con h4{
+    margin-bottom: 15px;
+    margin-top: 15px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #e66030;	
+}
+.ad-log-in-con p{}
+.ad-log-in-con form{}
+.ad-log-in-con form input{}
+            </style>
             <div class="ed-res-bg">
             <div class="container com-sp pad-bot-70">
                 <div class="row">
