--- a/blog1.html
+++ b/blog1.html
@@ -683,6 +683,15 @@ padding: 6px 0px;
 	float:left;
 	width:20%;
 }
+.con-title h2{
+     font-size: 36px;
+     font-family: sans-serif;
+     margin-top: 0px;
+     margin-bottom: 15px;
+     line-height: 40px;
+     color: #fff;
+     text-shadow: 2px 0px 0px #000;
+}
             </style>
             <div class="ed-res-bg">
             <div class="container com-sp pad-bot-70">
