--- a/blog1.html
+++ b/blog1.html
@@ -582,7 +582,7 @@
 .ed-rsear-in ul{}
 .ed-rsear-in ul li{
     float: left;
-    width: 33%;
+    width: auto;
     box-sizing: border-box;
     padding: 10px;
 }
@@ -711,7 +711,7 @@ padding: 6px 0px;
                                             <div class="ed-rsear-dec ed-faci-full-bot">
                                                 <h4><a href="#" target="_blank">125<sup>th</sup> ANNIVERSARY OF COLLEGE </a></h4>
                                                 <p>Today we celebrate 125 years since the foundingCollege, Colombo on the 2<sup>nd</sup> of March, .</p>
-                                                <a href="https://www.facebook.com/MediaSJC/videos/2848109718800353/" target="_blank" class="read-line-btn">Read more</a>
+                                                <a href="/" target="_blank" class="read-line-btn">Read more</a>
                                             </div>
                                         </div>
                                     </li>
