--- a/blog1.html
+++ b/blog1.html
@@ -582,7 +582,7 @@
 .ed-rsear-in ul{}
 .ed-rsear-in ul li{
     float: left;
-    width: auto;
+    width: 10%;
     box-sizing: border-box;
     padding: 10px;
 }
@@ -683,22 +683,10 @@ padding: 6px 0px;
 	float:left;
 	width:20%;
 }
-.con-title h2{
-     font-size: 36px;
-     font-family: sans-serif;
-     margin-top: 0px;
-     margin-bottom: 15px;
-     line-height: 40px;
-     color: #fff;
-     text-shadow: 2px 0px 0px #000;
-}
             </style>
             <div class="ed-res-bg">
             <div class="container com-sp pad-bot-70">
                 <div class="row">
-                        <div class="con-title">
-                            <h2>NEWS &amp; EVENTS</h2>
-                        </div>
                     <div class="cor about-sp">
                         <div class="ed-rsear">
                             <div class="ed-rsear-in">
